<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DynamoDrivenOdometer</string>
    <string name="dodConnectedFalse">---</string>
    <string name="dodConnectedScanning">Scanning...</string>
    <string name="dodConnectedTrue">Connected</string>
    <string name="action_settings">Settings</string>
    <string name="unitValueDefault">KM</string>
    <string name="distanceValueDefault">---.---</string>
    <string name="connectedToLabel">Device</string>
    <string name="lastUpdateLabel">Last update</string>
    <string name="lastUpdate">---</string>
    <string name="messageDefault">No messages</string>
    <string name="msgBleNotSupported">BLE is not supported</string>
    <string name="msgBluetoothNotSupported">Bluetooth not supported</string>
    <string name="menuScan">Scan</string>
    <string name="menuScan">Scan</string>
    <string name="gattConnectedTrue">Gatt on</string>
    <string name="gattConnectedFalse">Gatt off</string>
    <string name="switchPermanentLabel">Permanet</string>

</resources>
