<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectedToLabel"
        android:id="@+id/connectedToLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/dodConnectedFalse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connectedToValue"
        android:layout_toEndOf="@+id/gattConnectedValue"
        android:layout_toStartOf="@+id/distanceValue"
        android:layout_below="@+id/connectedToLabel"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gattConnectedFalse"
        android:id="@+id/gattConnectedValue"
        android:layout_toEndOf="@+id/connectedToLabel"
        android:password="false"
        android:layout_below="@+id/connectedToValue"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/distanceValueDefault"
        android:id="@+id/distanceValue"
        android:textSize="50dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitValueDefault"
        android:id="@+id/unitValue"
        android:layout_toEndOf="@+id/distanceValue"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/distanceValue"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdateLabel"
        android:id="@+id/lastUpdateLabel"
        android:layout_below="@+id/distanceValue"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdate"
        android:id="@+id/lastUpdateValue"
        android:layout_toEndOf="@+id/lastUpdateLabel"
        android:layout_alignTop="@+id/lastUpdateLabel"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageDefault"
        android:id="@+id/messageValue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:lines="3" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectSwitchLabel"
        android:id="@+id/connectSwitch"
        android:layout_below="@+id/gattConnectedValue"
        android:layout_alignEnd="@+id/unitValue"
        android:layout_marginTop="42dp"
        android:onClick="onClickConnectSwitch"/>

</RelativeLayout>
